[package]
name = "cgtop"
version = "0.1.0"
edition = "2024"
default-run = "cgtop"

[dependencies]
# Core TUI Framework
ratatui = "0.28"
crossterm = "0.28"

# cgroup v2 Interaction
procfs = "0.16"

# System Integration
sysinfo = "0.32"
nix = { version = "0.29", features = ["process"] }

# Async and Threading
tokio = { version = "1.0", features = ["full"] }
crossbeam = "0.8"
parking_lot = "0.12"

# Data Processing
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
hashbrown = "0.15"

# Additional utilities
futures = "0.3"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
# Testing framework
proptest = "1.4"           # Property-based testing
tempfile = "3.8"           # Temporary files for testing
assert_matches = "1.5"     # Pattern matching assertions
pretty_assertions = "1.4"  # Better assertion output
mockall = "0.12"           # Mocking framework
criterion = { version = "0.5", features = ["html_reports"] } # Benchmarking

[[bench]]
name = "tree_benchmarks"
harness = false
